[metadata]
name = everyaction-client
version = 0.2.11
author = Bobbey Reese
author_email = bobbeyreese@gmail.com
description = A client for EveryAction implemented in Python3.8+
url = https://github.com/partiallyderived/everyaction-client
project_urls =
    Documentation = https://partiallyderived.github.io/everyaction-client

classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = everyaction
python_requires = >=3.8
install_requires =
    makefun>=1.11.3
    requests>=2.25.1

[options.extras_require]
doc = sphinx>=3.4.3
test =
    pytest>=6.2.2
    http-router>=2.0.3