[metadata]
name = everyaction-client
version = 0.3.2
description = A Python client for the EveryAction 8 REST API.
long_description = This package implements a Python client for the
    [EveryAction 8 REST API](https://docs.everyaction.com/reference/api-overview), which makes the process of sending
    EveryAction requests from Python easier. For usage information, check out the
    [documentation](https://python-client-for-everyaction.readthedocs.io/en/latest/).
long_description_content_type = text/markdown
author = Bobbey Reese
author_email = bobbeyreese@gmail.com
url = https://github.com/partiallyderived/everyaction-client
project_urls =
    Documentation = https://python-client-for-everyaction.readthedocs.io/en/latest/

classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = everyaction
python_requires = >=3.8
install_requires =
    makefun>=1.11.3
    requests>=2.25.1

[options.extras_require]
doc = sphinx>=3.4.3
test =
    pytest>=6.2.2
    http-router>=2.0.3